fix DialogManager | add DialogRepository

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ bin/
 obj/
 packages/
 .idea/
+Walphor/Save/
+Walphor/DataBase/
 update.bat
 ІПЗ-23-4 Грушевицький Денис.docx
 ІПЗ-23-4 Грушевицький Денис.pdf
